--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 inputRootDir=input
 outputRootDir=output
-
+# to read inputs
 crewFileName=crew
-missionsFileName=missions
+spacemapFileName=spacemap
 spaceshipsFileName=spaceships
-
+# to write missions in output file
+missionsFileName=missions
 fileRefreshRate=60
-
 dateTimeFormat=yyyy-MM-dd HH:mm:ss
