--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     implementation 'org.slf4j:slf4j-jdk14:1.7.30'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    'org.apache.logging.log4j:log4j-slf4j-impl:2.14.0'
 }
